Cambio clases de botones y arreglo de responsive

--- a/src/components/Buttons.astro
+++ b/src/components/Buttons.astro
@@ -1,8 +1,8 @@
-<div class="my-6">
-  <a class="hover:bg-[#6F757C] rounded-lg mr-3 mb-2 px-3 py-2 text-sm" href="#"
+<div class="my-6 flex flex-row gap-3 justify-center">
+  <a class="hover:bg-[#6F757C] rounded-lg mb-2 px-3 py-2 text-medium text-sm" href="#"
     >All Products</a
   >
-  <a class="hover:bg-[#6F757C] rounded-lg mr-12 mb-2 px-3 py-2 text-sm" href="#"
+  <a class="hover:bg-[#6F757C] rounded-lg mb-2 px-3 py-2 text-medium text-sm" href="#"
     >Available Now</a
   >
 </div>
