--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Simple Coffe Listing">
-  <main class="fixed w-full flex flex-col items-center justify-center">
+  <main class="relative w-full flex flex-col items-center justify-center">
 	<MainCard/>
   </main>
 </Layout>
