--- a/src/components/MainCard.astro
+++ b/src/components/MainCard.astro
@@ -3,12 +3,12 @@ import Buttons from "./Buttons.astro";
 import Vector from "../assets/icons/Vector.astro"
 ---
 
-<section class=" w-[1465px] h-[375px] bg-[#1B1D1F] rounded-xl text-center">
-    <div class="fixed ml-96">
+<section class="xl:mt-[170px] xl:w-[1160px] 2xl:mt-[213px] relative 2xl:w-[1460px] h-[375px] bg-[#1B1D1F] rounded-xl text-center">
+    <div class="absolute ml-96">
         <Vector/>
     </div>
   <div
-    class="fixed px-[475px] pt-20 flex flex-col "
+    class="absolute xl:px-[320px] pt-20 2xl:px-[450px] flex flex-col "
   >
     <h5
       class="font-semibold subpixel-antialiased tracking-wider mb-3 text-[#FEF7EE] text-[32px]"
