--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<img class="sticky" src="src/assets/images/bg-cafe.jpg" alt="coffe-image" />
+		<img class="fixed" src="src/assets/images/bg-cafe.jpg" alt="coffe-image" />
 		<slot />
 	</body>
 </html>
