--- a/src/components/MainCard.astro
+++ b/src/components/MainCard.astro
@@ -3,19 +3,19 @@ import Buttons from "./Buttons.astro";
 import Vector from "../assets/icons/Vector.astro"
 ---
 
-<section class="xl:mt-[170px] xl:w-[1160px] 2xl:mt-[213px] relative 2xl:w-[1460px] h-[375px] bg-[#1B1D1F] rounded-xl text-center">
-    <div class="absolute ml-96">
+<section class="w-[414px] mt-[75px] md:w-[1050px] md:mt-[153px] xl:mt-[170px] xl:w-[1160px] 2xl:mt-[213px] sticky 2xl:w-[1460px] h-[400px] bg-[#1B1D1F] rounded-xl text-center">
+    <div class="absolute mt-10 pl-[520px]">
         <Vector/>
     </div>
   <div
-    class="absolute xl:px-[320px] pt-20 2xl:px-[450px] flex flex-col "
+    class="absolute px-[65px] md:px-[280px] xl:px-[320px] pt-20 2xl:px-[450px] flex flex-col "
   >
     <h5
       class="font-semibold subpixel-antialiased tracking-wider mb-3 text-[#FEF7EE] text-[32px]"
     >
       Our Collection
     </h5>
-    <p class="w-[500px] text-base font-medium text-wrap text-[#6F757C]">
+    <p class="w-[300px] md:w-[500px] text-base font-medium text-wrap text-[#6F757C]">
       Introducing our Coffee Collection, a selection of unique coffees from
       different roast types and origins, expertly roasted in small batches and
       shipped fresh weekly.
