--- a/src/components/MainCard.astro
+++ b/src/components/MainCard.astro
@@ -4,7 +4,7 @@ import Vector from "../assets/icons/Vector.astro"
 ---
 
 <section class="w-[414px] mt-[75px] md:w-[1050px] md:mt-[153px] xl:mt-[170px] xl:w-[1160px] 2xl:mt-[213px] sticky 2xl:w-[1460px] h-[400px] bg-[#1B1D1F] rounded-xl text-center">
-    <div class="absolute mt-10 pl-[520px]">
+    <div class="absolute mt-10 xl:pl-[560px] pl-[520px]">
         <Vector/>
     </div>
   <div
