--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Simple Coffe Listing">
   <main class="relative w-full flex flex-col items-center justify-center">
-	<MainCard>
-    <Coffes/>
-  </MainCard>
+	<MainCard/>
+  <Coffes/>
   </main>
 </Layout>
