--- a/src/components/Coffes.astro
+++ b/src/components/Coffes.astro
@@ -13,7 +13,7 @@ interface responseData{
 }
 ---
 
-<div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
+<div class="grid gap-x-10 gap-y-12 grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 items-center justify-center">
     {
         coffes.map((coffe: responseData)=>(
             <CardCoffes
