--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,9 @@
 ---
-import '@fontsource/dm-sans';
+import "@fontsource/dm-sans";
+import MainCard from "../components/MainCard.astro";
+import { ViewTransitions } from "astro:transitions";
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -9,25 +11,28 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<img class="fixed" src="src/assets/images/bg-cafe.jpg" alt="coffe-image" />
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+    <ViewTransitions/>
+  </head>
+  <body class="relative w-full flex flex-col items-center justify-center">
+    <img class="" src="src/assets/images/bg-cafe.jpg" alt="coffe-image" />
+    <MainCard>
+      <slot />
+    </MainCard>
+  </body>
 </html>
 <style is:global>
-	:root {
-		color-scheme: light dark;
-	}
-	html {
-		font-family: "Dm Sans", system-ui, sans-serif;
-		background: #111315;
-	}
+  :root {
+    color-scheme: dark light;
+  }
+  html {
+    font-family:"Dm Sans Variable", system-ui, sans-serif;
+    background: #111315;
+  }
 </style>
