--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Coffes from "../components/Coffes.astro";
+import MainCard from "../components/MainCard.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
