--- a/src/components/MainCard.astro
+++ b/src/components/MainCard.astro
@@ -5,13 +5,13 @@ import Coffes from "./Coffes.astro";
 ---
 
 <section
-  class=" w-[424px] mt-[100px] md:w-[1050px] md:mt-[153px] xl:mt-[185px] xl:w-[1280px] 2xl:mt-[213px] 2xl:w-[1460px] h-dvh md:h-[850px] bg-[#1B1D1F] flex rounded-xl text-center"
+  class=" w-[424px] mt-[100px] mb-[100px] md:w-[875px] md:mt-[130px] xl:mt-[185px] xl:w-[1280px] 2xl:mt-[232px] 2xl:w-[1600px] h-[2000px] md:h-[940px] xl:[800px] 2xl:h-[950px]  bg-[#1B1D1F] flex rounded-xl text-center"
 >
-  <div class="absolute mt-9 pl-[155px] xl:pl-[630px] md:pl-[520px]">
+  <div class="absolute mt-9 pl-[155px] md:pl-[420px] xl:pl-[630px] 2xl:pl-[790px]">
     <Vector />
   </div>
   <div
-    class="absolute px-[15px] md:px-[150px] pt-20 2xl:px-[450px] xl:w-[1280px] flex flex-col justify-center items-center"
+    class="absolute px-[15px] md:px-[150px] pt-20  2xl:w-[1600px] xl:w-[1280px] flex flex-col justify-center items-center"
   >
     <h5
       class="font-semibold subpixel-antialiased mb-3 text-[#FEF7EE] text-4xl w-[400px] md:w-[500px] "
