Cambio de carpeta de bg-cafe

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const { title } = Astro.props;
     html {
       font-family: "Dm Sans", system-ui, sans-serif;
       background: #111315;
-      background-image: url('src/assets/images/bg-cafe.jpg');
+      background-image: url('/images/bg-cafe.jpg');
       background-repeat: no-repeat;
       background-size: contain;
     }
